# otus

./: .gitignore  CMakeLists.txt  accuracy_finder.cpp  accuracy_finder.h  allocator.h  async.cpp  async.h  classifier.h  cmd.cpp  cmd_mgr.h  console_logger.h  custom_list.h  database.cpp  database.h  differ.cpp  differ.h  file_logger.cpp  file_manager.h  helpers.cpp  helpers.h  lib.cpp  lib.h  logger.h  logger_observer.h  main.cpp  mapreduce.cpp  mapreduce.h  matrix.h  mlp_classifier.cpp  mlp_classifier.h  model.cpp  model.h  model_listener.h  network.cpp  network.h  presenter.cpp  presenter.h  proj_info.cpp  server.cpp  server.h  (+10 more)
.github/workflows/: release.yml
bulk/: async.cpp  async.h  cmd_mgr.h  console_logger.h  file_logger.h  logger_observer.h  utils.cpp  utils.h
ip_address_filtering/: ip_address.cpp  ip_address.h  ip_filter.cpp
